--- a/board/templates/list.html
+++ b/board/templates/list.html
@@ -38,9 +38,54 @@
     	
     	
     	
+    	
 		<h2>게시판</h2>
 		게시물수 {{boardCount}} <br>
 		<a href="/write" class="list-group-item list-group-item-success" ><strong>글쓰기</strong></a>
+		
+		<!-- 검색 -->		
+		<form method="post">
+			{% csrf_token %} <!-- 크로스사이트스크립팅 공격방지코드 -->
+			<select name="search_option" class="form-control">
+				{% if search_option == "writer" %}
+					<option value="">선택하세요</option>
+					<option value="writer" selected>이름</option>
+					<option value="title">제목</option>
+					<option value="content">내용</option>
+					<option value="all">이름+제목+내용</option>
+				{% elif search_option == "title" %}
+					<option value="">선택하세요</option>
+					<option value="writer">이름</option>
+					<option value="title" selected>제목</option>
+					<option value="content">내용</option>
+					<option value="all">이름+제목+내용</option>
+				{% elif search_option == "content" %}
+					<option value="">선택하세요</option>
+					<option value="writer">이름</option>
+					<option value="title">제목</option>
+					<option value="content" selected>내용</option>
+					<option value="all">이름+제목+내용</option>
+				{% elif search_option == "all" %}
+					<option value="">선택하세요</option>
+					<option value="writer">이름</option>
+					<option value="title">제목</option>
+					<option value="content">내용</option>
+					<option value="all" selected>이름+제목+내용</option>
+				{% else %}
+					<option value="" selected>선택하세요</option>
+					<option value="writer">이름</option>
+					<option value="title">제목</option>
+					<option value="content">내용</option>
+					<option value="all">이름+제목+내용</option>
+				{% endif %}
+			</select>
+			
+			<input type="text" name="search" value="{{search}}">
+			<input type="submit" value="검색">
+		</form>
+		<!-- 검색 끝 -->
+		
+		
 		
 		<table class="table">
 			<thead>
@@ -70,12 +115,39 @@
 		</table>
 		
 		
-		<!-- paging: Center-aligned -->
+		<!-- 페이징 -->
 		<ul class="pagination justify-content-center" style="margin:20px 0">
-			<li class="page-item"><a class="page-link" href="javascript:void(0);">Previous</a></li>
-			<li class="page-item"><a class="page-link" href="javascript:void(0);">1</a></li>
-			<li class="page-item"><a class="page-link" href="javascript:void(0);">2</a></li>
-			<li class="page-item"><a class="page-link" href="javascript:void(0);">Next</a></li>
+			{% if start_page >= page_list_size %}
+				<li class="page-item"><a class="page-link" href="?start={{prev_list}}">Previous</a></li>
+			{% endif %}
+			
+			{% autoescape off %}
+				{% for link in links %}
+					<li class="page-item">{{link}}</li>
+				{% endfor %}
+			{% endautoescape %}
+			
+			{% if total_page > end_page %}
+				<li class="page-item"><a class="page-link" href="?start={{next_list}}">Next</a></li>
+			{% endif %}
 		</ul>
+		<!-- 페이징 끝 -->
 	</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
